Fix display overflow

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 
 .result-display {
     height: 80px;
-    font-size: 46px;
+    font-size: 42px;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
